test/Dialect/Verif/invariants_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  struct.def @Top {
    function.def @compute() -> !struct.type<@Top> {
      %self = struct.new : !struct.type<@Top>
      scf.while : () -> () {
        %true = arith.constant  true 
        scf.condition(%true)
      } do {
        scf.yield
      } 

      function.return %self : !struct.type<@Top>
    }
    function.def @constrain(%self: !struct.type<@Top>)  {
      function.return
    }
  }

  verif.contract @Foo for @Top (%self: !struct.type<@Top>) {
    // expected-error@+1 {{'verif.invariant' op no invariant target with label "loopA" found in contract target "Top"}}
    verif.invariant for @loopA() {
      %true = arith.constant  true
      verif.require_compute %true
    }
  }
}

// -----

module attributes {llzk.lang} {
  struct.def @Top {
    function.def @compute() -> !struct.type<@Top> {
      %self = struct.new : !struct.type<@Top>
      scf.while : () -> () {
        %true = arith.constant  true 
        scf.condition(%true)
      } do {
        scf.yield
      } attributes {loop_label = "loopB"}

      function.return %self : !struct.type<@Top>
    }
    function.def @constrain(%self: !struct.type<@Top>)  {
      function.return
    }
  }

  verif.contract @Foo for @Top (%self: !struct.type<@Top>) {
    // expected-error@+1 {{'verif.invariant' op no invariant target with label "loopA" found in contract target "Top"}}
    verif.invariant for @loopA() {
      %true = arith.constant  true
      verif.require_compute %true
    }
  }
}

// -----

module attributes {llzk.lang} {
  function.def @Bar() attributes {function.allow_witness} {
    %c0 = felt.const  4
    %0 = scf.while (%1 = %c0) : (!felt.type) -> (!felt.type) {
      %true = arith.constant  true 
      scf.condition(%true) %1 : !felt.type
    } do {
      ^bb0(%2: !felt.type):
      scf.yield %2 : !felt.type
    } attributes {loop_label = "loopA"}
    function.return
  }

  verif.contract @Foo for @Bar () {
    // expected-error@+1 {{'verif.invariant' op target has 1 arguments but invariant declared 2}}
    verif.invariant for @loopA(%0: !felt.type, %1: !felt.type) {
      %true = arith.constant  true
      verif.require_compute %true
    }
  }
}

// -----

module attributes {llzk.lang} {
  function.def @Bar() attributes {function.allow_witness} {
    %c0 = felt.const  4
    %0 = scf.while (%1 = %c0) : (!felt.type) -> (!felt.type) {
      %true = arith.constant  true 
      scf.condition(%true) %1 : !felt.type
    } do {
      ^bb0(%2: !felt.type):
      scf.yield %2 : !felt.type
    } attributes {loop_label = "loopA"}
    function.return
  }

  verif.contract @Foo for @Bar () {
    // expected-error@+1 {{'verif.invariant' op target argument #0 expected type '!felt.type' but invariant declared type !array.type<1 x !felt.type>}}
    verif.invariant for @loopA(%0: !array.type<1 x !felt.type>) {
      %true = arith.constant  true
      verif.require_compute %true
    }
  }
}
